--- a/aviss/index.html
+++ b/aviss/index.html
@@ -274,12 +274,12 @@
       <img src="./assets/프로필.png" alt="" class="repre">
       <h3>상위1%의 개발자</h3>
       <p>
-        전)네이버 개발자이자 오픈소스개발자(Mocha), 국내 알고리즘 상위 0.1% 등 여러 개발대회 수상을 했으며
-        국내IT베스트셀러 "면접을 위한 CS전공지식노트"를 집필하기도 했습니다.
+        전)네이버 개발자이자 오픈소스개발자(Mocha), 국내 알고리즘 상위 0.1%, 개발관련 대회 1위를 달성한 경험이 있으며 국내 IT 베스트셀러 "면접을 위한 CS전공지식노트"를 집필했습니다.
       </p>
-      <p>
+      <p> 
+        대표적으로 2년동안의 대규모프로젝트, 실시간 기상상황모니터링시스템(AMOS)를 성공적으로 개발 및 배포하여 현재 청주, 김포 공항 등 공항과 비행단에 설치되어 운영되고 있는 프로그램을 만든 경험이 있습니다.
         이러한 저의 실력과 경험을 바탕으로 완벽한 서비스를 만들어 나가겠습니다.
-      </p>
+      </p> 
     </div>
 
     <div id="service">
