--- a/aviss/index.html
+++ b/aviss/index.html
@@ -154,7 +154,7 @@
         top: 6px;
       }
 
-      ul li {
+      nav ul li {
         padding: 7px;
       }
 
@@ -187,7 +187,7 @@
 
     /*
     마일스톤
-    */ 
+    */
 
     #milestone ul {
       --col-gap: 2rem;
@@ -199,7 +199,7 @@
       column-gap: var(--col-gap);
       list-style: none;
       width: min(60rem, 90%);
-      margin-inline: auto; 
+      margin-inline: auto;
     }
 
     /* line */
@@ -225,8 +225,8 @@
       margin-inline: var(--inlineP);
       grid-row: span 2;
       display: grid;
-      grid-template-rows: min-content min-content min-content; 
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px; 
+      grid-template-rows: min-content min-content min-content;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
     }
 
     /* date */
@@ -273,7 +273,7 @@
       border: 0.3rem solid var(--accent-color);
       border-radius: 50%;
       top: 50%;
-      background: white; 
+      background: white;
       transform: translate(50%, -50%);
       right: calc(100% + var(--col-gap) + var(--line-w) / 2);
     }
@@ -311,7 +311,7 @@
       filter: blur(1px);
       transform: translate(-50%, 50%);
     }
-*/ 
+*/
     #milestone ul li .title::before {
       bottom: calc(100% + 0.125rem);
     }
@@ -366,15 +366,35 @@
     .credits a {
       color: var(--color);
     }
+
+    .typed-cursor {
+      display: none;
+    }
+
+    .typf {
+      margin-top: 50px;
+    }
+
+    .type {
+      position: absolute;
+      top: 260px;
+    }
+
+    .type2 {
+      position: absolute;
+      top: 61px;
+    }
   </style>
-  <script> 
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+  <script>
     window.onload = () => {
       let elementsArray = document.querySelectorAll("article > div");
       const fadeIn = () => {
         for (const elem of elementsArray) {
           const distInView = elem.getBoundingClientRect().top - window.innerHeight + 300;
           if (distInView < 0) {
-            elem.classList.add("inView");  
+            elem.classList.add("inView");
           } else {
             elem.classList.remove("inView");
           }
@@ -382,8 +402,33 @@
       }
       window.addEventListener('scroll', fadeIn);
       fadeIn();
+
+
+      var typed = new Typed('#element', {
+        strings: ['투자를 똑똑하게', 'AI투자비서 어비스와 함께'],
+        typeSpeed: 90,
+        startDelay: 1000,
+        fadeOut: true,
+        loop: true,
+      });
+      var typed = new Typed('#element2', {
+        strings: ['꾸준하게 위대하게'],
+        typeSpeed: 90,
+        startDelay: 1000,
+        fadeOut: true,
+        loop: true,
+      });
+
+      var typed = new Typed('#element3', {
+        strings: ['MAKE PERFECT.'],
+        typeSpeed: 90,
+        startDelay: 1000,
+        fadeOut: true,
+        loop: true,
+      });
     }
   </script>
+
 </head>
 
 <body>
@@ -395,7 +440,7 @@
       <ul>
         <li><a href="#company">소개</a></li>
         <li><a href="#milestone">마일스톤</a></li>
-        <li><a href="#culture">문화</a></li> 
+        <li><a href="#culture">문화</a></li>
         <li><a href="#repre">대표</a></li>
       </ul>
     </nav>
@@ -403,8 +448,8 @@
   <article>
     <div id="company">
       <img src="./assets/document.gif" class="ani_img">
-      <h1>투자를 똑똑하게.</h1>
-      <p>
+      <h1 id="element" class="type"> </h1>
+      <p class="typf">
         어비스는 인공지능과 투자자가 함께 성과를 내는 하이브리드모델 투자를 지향합니다.
         어떠한 이슈가 발생했을 때 관심종목에 대해 빠른 대처를 할 수 있도록 AI분석리포트를 제공하며 시장위험지표, 종목시그널 등을 제공해서 투자자의 경제적관점과 더불어 최고의 성과를 낼 수 있게 해주는
         똑똑한 인공지능 비서와 같은 역할을 합니다.
@@ -416,32 +461,32 @@
     </div>
 
     <div id="milestone">
-      <h1>꾸준하게. 위대하게.</h1>
-      <p>
-        2024년 시리즈A 투자를 목표로 꾸준하게 활동을 이어가고 있습니다. 
+      <h1 id="element2" class="type2"></h1>
+      <p class="typf">
+        2024년 시리즈A 투자를 목표로 꾸준하게 활동을 이어가고 있습니다.
       </p>
       <ul>
         <li style="--accent-color:#00337C">
           <div class="date">2022.03</div>
           <div class="title">회사설립</div>
-          <div class="descr">대표, 주홍철이 자본금 2000만원으로 회사를 설립했습니다.</div>
+          <div class="descr">자본금 2000만원으로 회사를 설립했습니다.</div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">2022.11</div>
           <div class="title">최우수기업선정</div>
-          <div class="descr">2022 예비창업패키지 - 핀테크 최우수기업으로 선정되었습니다.</div>
+          <div class="descr">2022 예비창업패키지 핀테크부문 최우수기업으로 선정되었습니다.</div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">2023.01</div>
           <div class="title">상표권 및 특허 출원</div>
-          <div class="descr">어비스 서비스에 관한 상표권 2개과 종목선정 알고리즘에 대한 특허를 2개 출원했습니다.</div>
-        </li> 
+          <div class="descr">어비스 서비스에 관한 상표권 2개, 종목선정 알고리즘에 대한 특허 2개 출원했습니다.</div>
+        </li>
       </ul>
     </div>
     <div id="culture">
       <img src="./assets/social-media.gif" class="ani_img">
-      <h1>도전하고 도전하며.</h1>
-      <div>
+      <h1 id="element3" class="type"> </h1>
+      <div class="typf">
         <h3>빠르고 냉정하게</h3>
         <p>POC를 해야 할일이 있다면 최대한 빠르게 진행을 하고 들인 노력과는 상관없이 냉정하고 합리적으로 최고의 아키텍처 및 피쳐에 대해 고민합니다.</p>
       </div>
