--- a/aviss/index.html
+++ b/aviss/index.html
@@ -462,7 +462,7 @@
         어떠한 이슈가 발생했을 때 관심종목에 대해 빠른 대처를 할 수 있도록 AI분석리포트를 제공하며 시장위험지표, 종목시그널 등을 제공해서 투자자의 경제적관점과 더불어 최고의 성과를 낼 수 있게 해주는
         똑똑한 인공지능 비서와 같은 역할을 합니다.
       </p>
-      <p>어비스는 2023년 12월에 공식 출시될 예정입니다. 알림설정을 통해 가장 먼저 어비스를 경험해보세요. </p>
+      <p>알림설정을 통해 가장 먼저 어비스를 경험해보세요. </p>
       <div>
         <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림 신청</a>
       </div>
@@ -477,17 +477,22 @@
         <li style="--accent-color:#00337C">
           <div class="date">2022.03</div>
           <div class="title">회사설립</div>
-          <div class="descr">자본금 2000만원으로 회사를 설립했습니다.</div>
+          <div class="descr">자본금 2000만원, 열정, 실력에 대한 자신감 하나로 회사를 설립했습니다.</div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">2022.11</div>
           <div class="title">최우수기업선정</div>
-          <div class="descr">2022 예비창업패키지 핀테크부문 최우수기업으로 선정되었습니다.</div>
+          <div class="descr">경쟁률 10 : 1, 2022 예비창업패키지 핀테크부문 최우수기업으로 선정되었습니다.</div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">2023.01</div>
           <div class="title">상표권 및 특허 출원</div>
-          <div class="descr">어비스 서비스에 관한 상표권 2개, 종목선정 알고리즘에 대한 특허 2개 출원했으며 최신모델을 기반으로 수익률 50% 등의 성과를 달성하고 있습니다.</div>
+          <div class="descr">어비스 서비스에 관한 상표권 2개 등록, 종목선정 알고리즘에 대한 특허 2개 출원을 했습니다. </div>
+        </li> 
+        <li style="--accent-color:#00337C">
+          <div class="date">2023.02</div>
+          <div class="title">수익률 POC</div>
+          <div class="descr">특정기간 내 S&P500 대비 어비스 기반 투자한 수익률이 24% 더 발생했습니다.이후 안정성과 수익성에 대한 업데이트를 꾸준히 진행하고 있습니다. </div>
         </li> 
       </ul>
     </div>
