--- a/aviss/index.html
+++ b/aviss/index.html
@@ -48,7 +48,7 @@
     }
 
     article>div {
-      padding-top: 80px; 
+      padding-top: 80px;
     }
 
     a {
@@ -142,9 +142,10 @@
     }
 
     @media only screen and (max-width: 900px) {
-      #milestone ul{
+      #milestone ul {
         --row-gap: 4rem !important;
       }
+
       article {
         width: 100%;
       }
@@ -221,7 +222,7 @@
       margin-bottom: var(--row-gap);
     }
     */
-    #milestone ul li{
+    #milestone ul li {
       margin-bottom: var(--row-gap);
     }
 
@@ -303,7 +304,8 @@
     #milestone ul li .descr {
       padding-block-end: 1.5rem;
       font-weight: 300;
-    } 
+    }
+
     #milestone ul li .title::before {
       bottom: calc(100% + 0.125rem);
     }
@@ -323,6 +325,19 @@
       color: var(--color);
     }
 
+    li a,
+    #repre a {
+      padding: 5px;
+      background: #00337c;
+      border-radius: 5px;
+      color: white; 
+    }
+    li a{
+    position: absolute; 
+    bottom: 7px;
+    right: 10px;
+    }
+
     .typed-cursor {
       display: none;
     }
@@ -340,9 +355,11 @@
       position: absolute;
       top: 61px;
     }
-    #product img{
-      width:300px;
+
+    #product img {
+      width: 300px;
     }
+
     @media (min-width: 40rem) {
       #milestone ul {
         grid-template-columns: 1fr var(--line-w) 1fr;
@@ -378,8 +395,8 @@
 
       #milestone ul li:nth-child(odd) .date {
         border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
-      } 
-    } 
+      }
+    }
   </style>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
@@ -447,8 +464,10 @@
       <img src="./assets/document.gif" class="ani_img">
       <h1 id="element" class="type"> </h1>
       <p class="typf">
-        AVISS aims for a hybrid model investment that combines artificial intelligence and investors' economic perspectives to achieve performance.
-        We provide AI analysis reports to quickly respond to issues of interest, and offer analysis reports and recommendation alerts for stocks selected by AVISS.
+        AVISS aims for a hybrid model investment that combines artificial intelligence and investors' economic
+        perspectives to achieve performance.
+        We provide AI analysis reports to quickly respond to issues of interest, and offer analysis reports and
+        recommendation alerts for stocks selected by AVISS.
       </p>
       <p>Experience AVISS first by setting up notifications. </p>
       <p>Experience the smart AI assistant, AVISS, first through notification settings.</p>
@@ -466,34 +485,44 @@
         <li style="--accent-color:#00337C">
           <div class="date">March 2022</div>
           <div class="title">Company Established</div>
-          <div class="descr">Founded the company with 20 million KRW in capital, passion, and confidence in our skills <a href="https://www.kised.or.kr/menu.es?mid=a10205010000" target="_blank" rel="noopener noreferrer">link</a></div>
+          <div class="descr">Founded the company with 20 million KRW in capital, passion, and confidence in our skills
+            <a href="https://www.kised.or.kr/menu.es?mid=a10205010000" target="_blank"
+              rel="noopener noreferrer">link</a></div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">November 2022</div>
           <div class="title">Selected as Excellent Company</div>
-          <div class="descr">Selected as the best company in the Fintech sector of the 2022 Startup Package with a 10:1 competition rate.</div>
+          <div class="descr">Selected as the best company in the Fintech sector of the 2022 Startup Package with a 10:1
+            competition rate.</div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">January 2023</div>
           <div class="title">Trademark and Patent Application</div>
-          <div class="descr">Completed registration of 2 necessary trademarks and applied for 2 patents internally.</div>
-        </li>  
+          <div class="descr">Completed registration of 2 necessary trademarks and applied for 2 patents internally.
+          </div>
+        </li>
         <li style="--accent-color:#00337C">
           <div class="date">December 2023</div>
           <div class="title">Profitability</div>
-          <div class="descr">Utilizing AVISS for actual investment, we are creating stable and profitable models with returns over 24% compared to the S&P500.</div>
-        </li> 
-        
+          <div class="descr">Utilizing AVISS for actual investment, we are creating stable and profitable models with
+            returns over 24% compared to the S&P500.</div>
+        </li>
+
         <li style="--accent-color:#00337C">
           <div class="date">March 2024</div>
           <div class="title">Early start-up package</div>
-          <div class="descr">My company was selected for the initial start-up package and the youth start-up package.<a href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a></div>
-        </li> 
+          <div class="descr">My company was selected for the initial start-up package and the youth start-up package.<a
+              href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a>
+          </div>
+        </li>
         <li style="--accent-color:#00337C">
           <div class="date">July 2024</div>
           <div class="title">Profitability</div>
-          <div class="descr">With our products, we achieved the top 13% in the actual investment competition of Toss Securities and achieved the top 5% of the total return on Toss Securities in July.<a href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a></div>
-        </li> 
+          <div class="descr">With our products, we achieved the top 13% in the actual investment competition of Toss
+            Securities and achieved the top 5% of the total return on Toss Securities in July.<a
+              href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a>
+          </div>
+        </li>
       </ul>
     </div>
     <div id="culture">
@@ -501,40 +530,51 @@
       <h1 id="element3" class="type"> </h1>
       <div class="typf">
         <h3>Fast and Perfect</h3>
-        <p>If there is a task to be done for AVISS's POC, we proceed as quickly as possible and, regardless of the effort put in, we coolly and rationally consider the best architecture and features.</p>
+        <p>If there is a task to be done for AVISS's POC, we proceed as quickly as possible and, regardless of the
+          effort put in, we coolly and rationally consider the best architecture and features.</p>
       </div>
       <div>
         <h3>Trust and Honesty</h3>
-        <p>We have a culture of trusting each other and speaking honestly if there are mistakes or unknowns. We are not afraid of not knowing, but we are afraid of not being honest.</p>
+        <p>We have a culture of trusting each other and speaking honestly if there are mistakes or unknowns. We are not
+          afraid of not knowing, but we are afraid of not being honest.</p>
       </div>
       <div>
         <h3>Responsible and Free</h3>
-        <p>We work responsibly on our assigned tasks and freely in our desired environment. You can choose your start time between 6 and 12 and accordingly set your end time between 15 and 21, and you only work 4 hours on Fridays. Additionally, you can work 100% remotely in your preferred environment, but offline work may be required when necessary.</p>
-      </div> 
+        <p>We work responsibly on our assigned tasks and freely in our desired environment. You can choose your start
+          time between 6 and 12 and accordingly set your end time between 15 and 21, and you only work 4 hours on
+          Fridays. Additionally, you can work 100% remotely in your preferred environment, but offline work may be
+          required when necessary.</p>
+      </div>
     </div>
     <div id="repre">
       <h1>Representative, Hongcheol Joo</h1>
       <img src="./assets/profile.png" alt="" class="repre">
       <h3>Top 0.1% Developer</h3>
       <p>
-        Former Naver developer, open-source developer (Mocha.js), top 0.1% in domestic algorithms, and author of the IT bestseller "CS Knowledge Note for Interviews."
+        Former Naver developer, open-source developer (Mocha.js), top 0.1% in domestic algorithms, and author of the IT
+        bestseller "CS Knowledge Note for Interviews."
       </p>
       <p> - Before) NAVER Developer</p>
       <p> - JavaScript Test Framework Mocha.js Contributor</p>
       <p> - Baekjun Algorithm Top 0.1%</p>
-      <p> - 1st in the IT field, author of "CS Major Knowledge Note for Interviews" <a href="https://www.yes24.com/Product/Goods/108887922" target="_blank">link</a></p>
+      <p> - 1st in the IT field, author of "CS Major Knowledge Note for Interviews" <a
+          href="https://www.yes24.com/Product/Goods/108887922" target="_blank">link</a></p>
       <p> - 63rd in the IT field, author of "MEVN, which creates and conquers real-time monitoring systems."</p>
-      
-      <p> - infrean: '10 Week Completion C++ Coding Test' and 'CS Essence of Knowledge' Instructor <a href="https://www.inflearn.com/users/70342/courses" target="_blank" rel="noopener noreferrer">link</a></p>
-      <p> - YouTube: Running the Big Stone Home Channel <a href="https://www.youtube.com/@kundol" target="_blank" rel="noopener noreferrer">link</a></p> 
-      <p> - 6th place in Kakao's Front End Challenge</p>  
+
+      <p> - infrean: '10 Week Completion C++ Coding Test' and 'CS Essence of Knowledge' Instructor <a
+          href="https://www.inflearn.com/users/70342/courses" target="_blank" rel="noopener noreferrer">link</a></p>
+      <p> - YouTube: Running the Big Stone Home Channel <a href="https://www.youtube.com/@kundol" target="_blank"
+          rel="noopener noreferrer">link</a></p>
+      <p> - 6th place in Kakao's Front End Challenge</p>
       <p> - Air Force Chief of Staff Award (related to military SW development)</p>
-      <p> - Army Missile Command Commander Award (related to military SW development)</p>  
-    </div> 
+      <p> - Army Missile Command Commander Award (related to military SW development)</p>
+    </div>
     <div id="product">
       <h1>product : AVISS report</h1>
-      <img src="./assets/1.png" alt="">  
-      <p>Graph Artificial Intelligence Model-based Investment Analysis Report for individual investors' quick response to issues allows individual investors to receive AI investment analysis reports within 5 minutes, which allows them to quickly identify appropriate countermeasures.</p>
+      <img src="./assets/1.png" alt="">
+      <p>Graph Artificial Intelligence Model-based Investment Analysis Report for individual investors' quick response
+        to issues allows individual investors to receive AI investment analysis reports within 5 minutes, which allows
+        them to quickly identify appropriate countermeasures.</p>
       <h1>product : AVISS signal</h1>
       <img src="./assets/2.png" alt="">
       <p>
@@ -542,8 +582,8 @@
       </p>
       <h1>product : AVISS macroreport</h1>
       <img src="./assets/3.png" alt="">
-      <p>A macroeconomic report that analyzes only the necessary macroeconomics.</p> 
-    </div> 
+      <p>A macroeconomic report that analyzes only the necessary macroeconomics.</p>
+    </div>
   </article>
   <footer>
     <p> 161-27-01242 / Industry: Information and Communication / Item: Application Software Development and Supply</p>
